--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -153,6 +153,7 @@
       (ne item.system.type 'affliction')
       (ne item.system.type 'augment')
       (ne item.system.type 'pet')
+      (ne item.system.type 'container')
     )}}
     <a class="item-control">
       <i
